# isolate

./: .ai-instructions.md  .clippy.toml  .file-sizes-before.txt  .gitignore  .jjignore  .mutants.toml  .refactoring-verification-report.md  .semgrepignore  .timestamp  08_BEADS.md  09_JUJUTSU.md  AGENTS.md  API_DOCUMENTATION.md  ARCHITECTURE.md  AUDIT_REPORT.md  BEADID_CONSOLIDATION_REPORT.md  BEADID_CONSOLIDATION_SUMMARY.md  BEADS_DDD_EXAMPLES.md  BEADS_DDD_REFACTORING_REPORT.md  BEADS_DDD_SUMMARY.md  BEADS_INVARIANT_TESTS_REPORT.md  BENCHMARKS.md  BENCHMARKS_IMPLEMENTATION_REPORT.md  BENCHMARKS_REPORT.md  BOUNDED_TYPES_GUIDE.md  BUGS-FOUND.md  BUILDERS_DOCUMENTATION.md  CHANGELOG.md  CHANGELOG_ENTRY.md  CLAUDE.md  CLI_CONTRACTS_HANDLER_EXAMPLES.md  CLI_CONTRACTS_REFACTORING.md  CLI_CONTRACTS_REFACTOR_CHECKLIST.md  CLI_CONTRACTS_REFACTOR_FILES.md  CLI_CONTRACTS_REFACTOR_SUMMARY.md  CLI_EXAMPLES.md  CLI_HANDLERS_REFACTOR_REPORT.md  CLI_PROPERTY_TESTS_REPORT.md  CLI_REGISTRATION_REPORT.md  CODE_AUDIT_REPORT.md  (+155 more)
crates/bead-kv/: Cargo.toml
crates/bead-kv/src/: lib.rs  main.rs  store.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs  metrics.rs  persistence.rs  phases.rs  state.rs
crates/scenarios/: Cargo.toml
crates/scenarios/examples/: basic.yaml
crates/scenarios/src/: lib.rs  runner.rs  sanitizer.rs  scenario.rs
crates/stak/: Cargo.toml
crates/stak-core/: Cargo.toml
crates/stak-core/src/: agent.rs  error.rs  events.rs  lib.rs  lock.rs  queue.rs
crates/stak/src/: coordination.rs  db.rs  error.rs  lib.rs  main.rs
crates/stak/src/cli/: mod.rs
crates/stak/src/commands/: agent.rs  batch.rs  events.rs  lock.rs  mod.rs  queue.rs
crates/twins/: Cargo.toml
crates/twins/examples/: basic.yaml
crates/twins/src/: definition.rs  lib.rs  server.rs  state.rs
crates/zjj/: Cargo.toml  moon.yml
crates/zjj-core/: Cargo.toml  moon.yml
crates/zjj-core/benches/: README.md  aggregate_operations.rs  event_serialization.rs  identifier_parsing.rs  repository_operations.rs  state_machine.rs
crates/zjj-core/examples/: test_kdl.rs
crates/zjj-core/src/: architecture_boundaries.rs  beads.rs  checkpoint.rs  config.rs  config_property_tests.rs  contracts.rs  effects.rs  error.rs  error_tests.rs  filelock.rs  fix.rs  functional.rs  hints.rs  hooks.rs  introspection.rs  jj.rs  jj_operation_sync.rs  json.rs  json_response.rs  json_tests.rs  kdl_validation.rs  lib.rs  moon_gates.rs  output_format.rs  recovery.rs  result.rs  session_state.rs  session_state_tests.rs  shutdown.rs  taskregistry.rs  templates_tests.rs  types.rs  types.rs.backup  types_tests.rs  validation.rs  watcher.rs  worker_error.rs  workspace_integrity.rs  workspace_state.rs  zellij.rs
crates/zjj-core/src/agents/: registry.rs
crates/zjj-core/src/beads/: README_DDD.md  analysis.rs  categorization.rs  db.rs  db_tests.rs  domain.rs  invariant_tests.rs  issue.rs  mod.rs  query.rs  query_tests.rs  similarity.rs  state_transition_tests.rs  summary.rs  trending.rs  types.rs
crates/zjj-core/src/build_lock/: mod.rs  operations.rs  queries.rs  types.rs
crates/zjj-core/src/cli_contracts/: agent.rs  config.rs  doctor.rs  domain_tests.rs  domain_types.rs  error.rs  macros.rs  mod.rs  queue.rs  queue_v2.rs  session.rs  session_v2.rs  stack.rs  status.rs  task.rs
crates/zjj-core/src/commands/: mod.rs  worker_error.rs
crates/zjj-core/src/config/: conflict_resolution.rs  defaults.rs  load.rs  merge.rs  mod.rs  tests_defaults.rs  tests_loading.rs  tests_validation.rs  types.rs  validate.rs
crates/zjj-core/src/contracts/: builders.rs  (+5 more)
crates/zjj-core/tests/: bd_1i1a_parent_workspace_test.rs  bd_1idz_stack_depth_fn_test.rs  bd_1ixz_stack_error_test.rs  bd_1ued_stack_merge_state_test.rs  bd_26kg_stack_root_test.rs  bd_2ljz_get_children_test.rs  bd_2s4_train_processing_test.rs  bd_36h8_stack_merge_state_column_test.rs  bd_36v_conflict_analysis_test.rs  bd_3axf_stack_depth_test.rs  bd_i6lp_test.rs  bd_mmtr_find_stack_root_test.rs  bd_umr4_dependents_test.rs  cli_properties.proptest-regressions  cli_properties.rs  concurrent_workspace_stress.rs  conflict_resolutions_tests.rs  doctor_adversarial_tests.rs  doctor_properties.rs  domain_aggregate_invariants.rs  domain_event_serialization.rs  domain_repository_mocks.rs  domain_state_machine_transitions.rs  fast_domain_validation.rs  fast_in_process_queue.rs  fast_test_utils.rs  identifier_properties.proptest-regressions  identifier_properties.rs  jsonl_schema_validation_test.rs  queue_adversarial.rs  queue_properties.rs  queue_stress.rs  ready_to_merge_test.rs  red-queen-g1-deduplication.rs  red-queen-g2-concurrency.rs  red-queen-g3-state-transitions.rs  rq_concurrent_ready.rs  rq_lock_basic.rs  rq_lock_edge_cases.rs  rq_ready_skip.rs  (+23 more)
crates/zjj/benches/: config_operations.rs  validation.rs
crates/zjj/schemas/: output.cue
crates/zjj/src/: app.rs  beads.rs  cli.rs  command_context.rs  db.rs  hooks.rs  json_output.rs  lib.rs  main.rs  progress.rs  selector.rs  session.rs
crates/zjj/tests/: AI_ERGONOMICS_TEST_COVERAGE.md  agent_feature.rs  agent_lifecycle_integration.rs  agent_properties.proptest-regressions  agent_properties.rs  ai_ergonomics_test.rs  atdd_object_commands.rs  bd_1e5n_stack_status_test.rs  bdd_integration_robustness.rs  cli_contract_pause_resume.rs  cli_flag_bookmark.rs  cli_flag_clean_config.rs  cli_flag_contract_abort.rs  cli_flag_contract_ai.rs  cli_flag_contract_can_i.rs  cli_flag_contract_context.rs  cli_flag_contract_contract.rs  cli_flag_contract_examples.rs  cli_flag_contract_focus.rs  cli_flag_contract_introspect.rs  cli_flag_contract_introspection.rs  cli_flag_contract_query.rs  cli_flag_contract_remove.rs  cli_flag_contract_spawn.rs  cli_flag_contract_status.rs  cli_flag_contract_sync.rs  cli_flag_contract_whatif.rs  cli_flag_contract_whereami.rs  cli_flag_contract_whoami.rs  cli_flag_pane.rs  cli_flag_queue.rs  cli_flag_queue_prune_worker_regressions.rs  command_edge_cases.rs  conflict_adversarial_tests.rs  conflict_e2e_tests.rs  drq_adversarial.rs  drq_agent_arena.rs  e2e_mvp_commands.rs  e2e_scenarios.rs  error_recovery.rs  (+83 more)
(+2204 files in other folders)
