[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.80"
authors = ["ZJJ Contributors"]
license = "MIT"
repository = "https://github.com/lprior-repo/zjj"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"

[workspace.lints.clippy]
# Zero unwrap law - COMPILE ERRORS (relaxed in tests)
unwrap_used = "deny"  # Changed to deny so tests can use #[allow]
expect_used = "deny"
panic = "forbid"
todo = "forbid"
unimplemented = "forbid"

# Quality enforcement (with priority)
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Specific allows
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"
type_complexity = "allow"
return_self_not_must_use = "allow"
trivially_copy_pass_by_ref = "allow"
map_unwrap_or = "allow"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
