[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.4.3"
edition = "2021"
rust-version = "1.80"
authors = ["ZJJ Contributors"]
license = "MIT"
repository = "https://github.com/lprior-repo/zjj"

# ============================================================================
# CENTRALIZED DEPENDENCIES - Single source of truth for all crates
# ============================================================================
[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.22"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Data structures
im = { version = "15.1", features = ["serde"] }
itertools = "0.13"
either = "1.13"

# CLI / Terminal
clap = "4.5"
ratatui = "0.30"
crossterm = "0.27"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system
directories = "6"
walkdir = "2"
fs2 = "0.4"
fs4 = { version = "0.11.1", features = ["tokio"] }
notify = "6"
notify-debouncer-mini = "0.4"
tar = "0.4"
flate2 = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Templating
askama = "0.12"

# Utilities
tap = "1.0"
strum = { version = "0.26", features = ["derive"] }
which = "7.0"
regex = "1.11"
kdl = "4.7"
sha2 = "0.10"
hostname = "0.4"
num-traits = "0.2"
is-terminal = "0.4"
libc = "0.2"

# Dev dependencies
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serial_test = "3.0"
proptest = "1.0"
filetime = "0.2"
rand = "0.8"
paste = "1.0"
tokio-test = "0.4"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"
dead_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
# Zero unwrap law - COMPILE ERRORS (relaxed in tests)
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

# Quality enforcement (with priority)
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Specific allows
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"
type_complexity = "allow"
return_self_not_must_use = "allow"
trivially_copy_pass_by_ref = "allow"
map_unwrap_or = "allow"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
