[package]
name = "bead-kv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bead-kv"
path = "src/main.rs"

[dependencies]
sled = "0.34.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4.43"
shellexpand = "3.0"
