[package]
name = "orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Time
chrono.workspace = true

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Collections & functional
im.workspace = true

# Logging
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
serial_test.workspace = true

[lints.rust]
unsafe_code = "forbid"
