[package]
name = "scenarios"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
futures.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true

# HTTP client
reqwest = { workspace = true, features = ["json"] }

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Parsing
regex.workspace = true

# Time
chrono.workspace = true

# Collections
im.workspace = true
itertools.workspace = true

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true

[lints.rust]
unsafe_code = "forbid"

[features]
default = []
