[package]
name = "stak"
version = "0.1.0"
edition = "2021"
description = "Local PR/merge queue management - like Graphite but running locally"

[[bin]]
name = "stak"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
stak-core = { path = "../stak-core" }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
