[package]
name = "zjj-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core functionality for ZJJ - zero unwrap, idiomatic Rust"

[lib]
name = "zjj_core"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
askama.workspace = true
im.workspace = true
tap.workspace = true
strum.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
directories.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
itertools.workspace = true
either.workspace = true
futures.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
sqlx.workspace = true
chrono.workspace = true
fs2.workspace = true
regex.workspace = true
walkdir.workspace = true
kdl.workspace = true
which.workspace = true

[dev-dependencies]
tokio-test.workspace = true
proptest.workspace = true
tempfile.workspace = true
serial_test.workspace = true

[lints]
workspace = true
