[package]
name = "zjj"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ZJJ - JJ workspace + Zellij session manager"

[[bin]]
name = "jjz"
path = "src/main.rs"

[dependencies]
zjj-core = { path = "../zjj-core" }
clap = "4.5"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.34", features = ["bundled"] }
directories = "6"
which = "7.0"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
toml = "0.8"

[lints]
workspace = true
