[package]
name = "zjj"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ZJJ - JJ workspace + Zellij session manager"

[[bin]]
name = "zjj"
path = "src/main.rs"

[dependencies]
zjj-core = { path = "../zjj-core" }
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
im.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
directories.workspace = true
which.workspace = true
ratatui.workspace = true
crossterm.workspace = true
toml.workspace = true
walkdir.workspace = true
toml_edit.workspace = true
itertools.workspace = true
futures.workspace = true
futures-util.workspace = true
chrono.workspace = true
num-traits.workspace = true
is-terminal.workspace = true
sha2.workspace = true
fs4.workspace = true
tar.workspace = true
flate2.workspace = true
hostname.workspace = true
libc.workspace = true
rand.workspace = true
tempfile.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
serial_test.workspace = true
proptest.workspace = true
filetime.workspace = true
rand.workspace = true

[lints]
workspace = true
