[package]
name = "zjj-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core functionality for ZJJ - zero unwrap, idiomatic Rust"

[lib]
name = "zjj_core"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
itertools = "0.13"
either = "1.13"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"

[lints]
workspace = true
